--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,3 +6,4 @@ project("Matej_CPlusPlus_Sandbox"  LANGUAGES CXX)
 add_subdirectory(chapter_00)
 add_subdirectory(chapter_01_rule_of_five)
 add_subdirectory(chapter_02_templates_name_mangling)
+add_subdirectory(chapter_03_inheritance)
